# concurrency_book

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CPPLINT.cfg  README.md  REUSE.toml
LICENSES/: MIT.txt
include/: hp_manager.h  lock_free_stack.h  lock_free_stack_v2.h  lock_free_stack_v3.h  mpmc_queue.h  parallel_quick_sort.h  spin_mutex.h  spsc_queue.h  thread_safe_stack.h
scripts/: CMakeLists.txt  act_rel_trans.cc  relaxed_order_1.cc  relaxed_order_2.cc  reuse_annotate.sh  seq_cst_order.cc
src/: CMakeLists.txt  hp_manager.cc
tests/: CMakeLists.txt  lock_free_stack_test.cpp  lock_free_stack_v2_test.cpp  lock_free_stack_v3_test.cpp  mpmc_queue_test.cpp  parallel_quick_sort_test.cpp  spin_mutex_test.cpp  spsc_queue_test.cpp  thread_safe_stack_test.cpp
